resolved types warnings and updated the blogDetail multi Content logic!

--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -104,3 +104,21 @@ body {
     @apply bg-background text-foreground;
   }
 } */
+
+
+/* ol: Ordered list */
+.htmlStructure ol {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 40px;
+  margin-inline-end: 0;
+  padding-inline-start: 40px;
+}
+
+/* li: List items */
+.htmlStructure li {
+  display: list-item;
+  text-align: -webkit-match-parent;
+}
